...
            .disabled(dataController.filterEnabled == false)

            Picker("Priority", selection: $dataController.filterPriority) {
                Text("All").tag(-1)
                Text("Low").tag(0)
                Text("Medium").tag(1)
                Text("High").tag(2)
            }
            .disabled(dataController.filterEnabled == false)

        } label: {
            Label("Filter", systemImage: "line.3.horizontal.decrease.circle")
                .symbolVariant(dataController.filterEnabled ? .fill : .none)
        }

        Button(action: addIssue) {
            Label("New Issue", systemImage: "square.and.pencil")
        }
    }

    // determine if the user is allowed to add an issue or if they
    // need to purchase the unlock subscription
    func addIssue() {
...
